# Seraph

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.agent  Dockerfile.seraphd  README.md  config.toml  seraph.db
.github/workflows/: docker.yml
agent-data/: ca.crt  identity.crt  identity.key
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.svelte
dashboard/src/components/: CertsView.svelte  Header.svelte  LogsView.svelte  OverviewView.svelte  RoutesView.svelte  SettingsView.svelte
data/: tunnel_ca.key
seraph-agent/: Cargo.toml
seraph-agent/src/: main.rs
seraphd/: Cargo.toml  config.toml
seraphd/src/: acme.rs  app.rs  cert_registry.rs  cert_store.rs  config.rs  event.rs  geoip.rs  ids.rs  lib.rs  main.rs  registry.rs  route.rs  route_registry.rs  secure_fs.rs  state.rs  stats.rs
seraphd/src/acme/: mod.rs
seraphd/src/control/: auth.rs  certs.rs  dashboard.rs  mod.rs  routes.rs  sse.rs  tunnels.rs
seraphd/src/control/ws/: certs.rs  mod.rs  routes.rs  types.rs
seraphd/src/db/: certs.rs  mod.rs  routes.rs  stats.rs  tunnels.rs
seraphd/src/registry/: mod.rs  routes.rs
seraphd/src/tunnel/: ca.rs  listener.rs  mod.rs  peer.rs
seraphd/src/web_proxy/: handler.rs  mod.rs  server.rs  tls.rs
seraphd/tests/: http2_tunnel.rs
