[package]
name = "seraphd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
pingora = { version = "0.8.1", features = ["openssl"] }
pingora-proxy = { version = "0.8.1", features = ["openssl"] }
openssl = "0.10"
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.7.9", features = ["ws"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rust-embed = "8.5.0"
mime_guess = "2.0.5"
arc-swap = "1.7.1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
instant-acme = "0.7"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
chrono = "0.4"
bytes = "1.0"
base64 = "0.22"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2"
rand = "0.8"
x509-parser = "0.16"
time = "0.3"
maxminddb = "0.29.0"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
tempfile = "3"
